# glow-minimal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: GlowApp.cc  GlowApp.hh  main.cc  shader.fsh  shader.vsh
